[tool.poetry]
name = "cats-api"
version = "0.1.0"
description = ""
authors = ["Björn Reetz <git@bjoern-reetz.de>"]
readme = "README.md"
packages = [{include = "cats_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
